# python.rfx-base

./: .env.example  .gitignore  Justfile  README.md  app.env  env  justfile  manager  pyproject.toml  requirements.dev.txt  requirements.txt
.circleci/: config.yml
.command/jucmd/: release.just
.command/pycmd/: release.py
alembic/: INSTRUCTIONS.md  alembic.ini  env.py
alembic/versions/: 2025-11-06.1726.e45d6ce74805.test_user_mig.py  2025-11-06.1737.01106efdcddc.add_user_tables.py  2025-11-06.1743.042e621d2a66.create_all_user_schema_tables.py  2025-11-06.1748.80429ebee0e3.add_user_tables.py  2025-11-06.1753.e95e4a5ec3c5.find_user_tables.py  2025-11-06.1800.7ffffacfed26.test_env_var_approach.py  2025-11-06.1802.ea38d5258d9a.final_debug.py  2025-11-06.1805.80375e4559d3.test_config_injection.py  2025-11-06.1806.8438872bd483.final_test_with_config.py  2025-11-06.1823.cc07d5c54a4c.success_using_config_for_schema.py  2025-11-06.1825.3bbec5658889.verify_empty_migration.py  2025-11-07.1325.9a5904cc863d.test_user.py  2025-11-07.1327.aa79510bd03f.test_user.py  2025-11-07.1328.9479f0daa895.test_policy.py  2025-11-07.1328.e904b5c41b59.test_message.py  2025-11-07.1329.aefd82bc7460.test_media.py  2025-11-07.1333.87f6449c1938.test_user_2.py  2025-11-11.1040.610ac391d01a.notify.py  2025-11-11.1437.61dfe8b82bcb.notify.py  2025-11-11.1809.b9fbf9ef75c1.notify.py  2025-11-12.1656.c4703b9a305d.user.py
biz/: README.md
docs/: AGENTS.md  CHANGELOG.md
docs/changelog/: AGENT.md
docs/release/: RELEASE-0.5.1.md  UNRELEASED.md
docs/rfx_discuss/: 01.rtc-message-schema.md
env/: develop
legacy/rfx_discussion/: __init__.py  command.py  endpoint.py  policy.py  query.py  utils.py
lib/: fluvius
md/: NOTIFY_CLAUDE_CONTEXT.md  NOTIFY_QUICK_START.md
mig/: init_db.py  migrate_understore.sql  populate.py  populate_sys_org.py  update_user.sql
mig/policy/: policy.csv  policy_resource.csv  policy_role.csv
mig/ref_system_role/: ref__system_role.csv
(+485 files in other folders)
